# Developer-Delta-Lake

./: README.md  delta.ipynb  pyproject.toml
dados/raw/clientes/: .part-00000-4e56ee6c-994d-4bf6-99a1-dfe27a1c5f3c-c000.snappy.parquet.crc  .part-00000-84d4e68f-7336-48df-b068-42b7d88f0f6c-c000.snappy.parquet.crc  .part-00000-ed241a14-a33a-4c5a-b5de-d38a1c57a0f3-c000.snappy.parquet.crc  .part-00002-cca57d30-0e27-4982-9cc7-b31a397e94c2-c000.snappy.parquet.crc  .part-00005-eb23e610-ff69-4834-89fa-c2888c8089d3-c000.snappy.parquet.crc  .part-00007-e4c3f8ad-81fe-46ed-a60f-fdecde641df1-c000.snappy.parquet.crc  part-00000-4e56ee6c-994d-4bf6-99a1-dfe27a1c5f3c-c000.snappy.parquet  part-00000-84d4e68f-7336-48df-b068-42b7d88f0f6c-c000.snappy.parquet  part-00000-ed241a14-a33a-4c5a-b5de-d38a1c57a0f3-c000.snappy.parquet  part-00002-cca57d30-0e27-4982-9cc7-b31a397e94c2-c000.snappy.parquet  part-00005-eb23e610-ff69-4834-89fa-c2888c8089d3-c000.snappy.parquet  part-00007-e4c3f8ad-81fe-46ed-a60f-fdecde641df1-c000.snappy.parquet
dados/raw/clientes/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000002.json.crc  .00000000000000000003.checkpoint.parquet.crc  .00000000000000000003.json.crc  ._last_checkpoint.crc  _last_checkpoint
