[tool.poetry]
name = "developer-delta-lake"
version = "0.1.0"
description = ""
authors = ["sidneisantiago <sidnei.gs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.4.2"
delta-spark = "2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
